--- a/Alt Designs/one/index.html
+++ b/Alt Designs/one/index.html
@@ -11,12 +11,13 @@
 <body>
   <main>
     <section class="build-full">
-      <h1>Chaos</h1>
-      <p>Create your own uique style</p>
+      <h1>Caos Suit Designer</h1>
+      <p>Create your own unique style and fly in style</p>
       <section class="build-wrap">
         <section class="color-picker">
           <div onclick="colorPickerPannelSet('measurements')" class="color-nav-1">Measurements</div>
-          <div onclick="colorPickerPannelSet('colors')" class="color-nav-2">Color Picker</div>
+          <div onclick="colorPickerPannelSet('colors')" class="color-nav-2">Front</div>
+          <div onclick="colorPickerPannelSet('colors')" class="color-nav-3">Back</div>
           <div id="color-picker-measurements" class="color-picker-measurements">
 
             testing
@@ -26,8 +27,8 @@
             <div id="color-single-left arm" class="color-single">
               <div class="color-single-wrap" onclick="colorPickerDropdown('left-upper-arm')">
                 <h4>Left Upper Arm</h4>
-                <div class="color-single-display" style="background: red"></div>
-                <p>Red</p>
+                <div id="left-upper-arm-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
+                <p id="left-upper-arm-title">Select</p>
                 <img src="./img/double-down-arrow.svg"/>
               </div>
               <div id="color-picker-dorpdown-left-arm" class="picker-dropdown left-armdropdown">
@@ -49,8 +50,8 @@
             <div id="color-single-right-arm" class="color-single">
               <div class="color-single-wrap" onclick="colorPickerDropdown('right-upper-arm')">
                 <h4>Right Upper Arm</h4>
-                <div class="color-single-display" style="background: red"></div>
-                <p>Red</p>
+                <div id="right-upper-arm-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
+                <p id="right-upper-arm-title">Select</p>
                 <img src="./img/double-down-arrow.svg"/>
               </div>
               <div id="color-picker-dorpdown-right-upper-arm" class="picker-dropdown left-armdropdown">
@@ -73,13 +74,25 @@
         </section>
         <section class="suit-display">
           <div class="suit-display-front suit-display-img">
+            <section class="suit-images">
+              <div id="upper-left-arm-svg-wrap" class"single-suit-image">
+                <svg style="fill:none;"id="upper-left-arm-svg" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 81.83 178.26"><title>left-upper-arm</title><g id="_0jEfYJ.tif" data-name="0jEfYJ.tif"><path d="M-105,462v3c-23.56-10.82-46.57-11.57-68.65,3.84-3.9,2.73-4.81.56-5.36-2.86-1.65-10.19-3.56-20.34-5-30.55-2.28-15.79-5.34-31.63,1-47.26a7.24,7.24,0,0,0,.46-2.45c.62-18.42,5.21-36.22,8.46-54.22,2-10.81,4.14-21.59,6.36-32.35.39-1.87.53-5.53,3.56-3.94,6.28,3.29,13.33,5.75,17.92,11.49,10.58,13.22,17.87,27.95,19.9,45,3.46,29.15,10.56,57.63,16.17,86.38C-108.63,446.11-106.74,454-105,462Z" transform="translate(186.83 -294.82)"/></g>
+                </svg>
+              </div>
+              <div id="upper-right-arm-svg-wrap" class"single-suit-image">
+                <svg  style="fill:none;" id="upper-right-arm-svg" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 81.83 178.26"><title>left-upper-arm</title><g id="_0jEfYJ.tif" data-name="0jEfYJ.tif"><path d="M-58,376v5a32.69,32.69,0,0,0-.76,3.87C-60.35,405.14-64,425.1-68,445h-2c-13.77-11.29-29.55-15.46-47.18-13.85-9.36.86-17.92,4.41-26.82,6.85v-5c1.42-6.66,2.95-13.29,4.25-20,5.21-26.57,12.38-52.75,16.07-79.6,2.57-18.7,6.86-36.5,19.06-51.59a27.57,27.57,0,0,1,7.59-7c5-2.89,10-5.88,15-8.82h3c2.11,10.88,4,21.81,6.38,32.64,3.52,16,6.32,32.13,8.92,48.29C-62.12,356.69-62.55,366.83-58,376Z" transform="translate(144 -266)"/></g>
+                </svg>
+              </div>
+            </section>
             <img src="./img/Hybrid1/h1-outline.png" />
+            <h2 class="suit-titles">Suit Front</h2>
           </div>
           <div class="suit-display-back suit-display-img">
             <img src="./img/Hybrid1/h1-outline.png" />
+            <h2 class="suit-titles">Suit Back</h2>
           </div>
           <div class="builder-btns">
-            <div class="builder-btn">Save Colors</div>
+            <div class="builder-btn" onclick="saveSuitOptions()">Save and Continue</div>
             <div class="builder-btn">Reset Designer</div>
           </div>
         </section>
