--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <main>
-    <a href="./Alt Designs/one/index.html"><button>Enter Suit Designer</button><a/>
+    <h1>Welcome to your testing environment!</h1>
+    <a href="./Alt Designs/one/index.html"><button class="enter">Enter Suit Designer</button><a/>
   </main>
 </body>
 <script src="./js.js"></script>
