--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 <body>
   <main>
     <h1>Welcome to your testing environment!</h1>
-    <a href="./Alt Designs/one/index.html"><button class="enter">Enter Suit Designer</button><a/>
+    <a><button onclick="loader()"class="enter">Enter Suit Designer</button><a/>
+    <section class="faux-load" id="faux-load">
+      <p class="mini-title">Powered By</p>
+      <img src="./img/userlite.png" />
+      <div class="sk-cube-grid">
+        <div class="sk-cube sk-cube1"></div>
+        <div class="sk-cube sk-cube2"></div>
+        <div class="sk-cube sk-cube3"></div>
+        <div class="sk-cube sk-cube4"></div>
+        <div class="sk-cube sk-cube5"></div>
+        <div class="sk-cube sk-cube6"></div>
+        <div class="sk-cube sk-cube7"></div>
+        <div class="sk-cube sk-cube8"></div>
+        <div class="sk-cube sk-cube9"></div>
+      </div>
+      <!-- <p>Loading...</p> -->
+    </section>
   </main>
 </body>
 <script src="./js.js"></script>
