--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <main>
+    <h1>Hey Heath,</h1>
     <h1>Welcome to your testing environment!</h1>
     <a><button onclick="loader()"class="enter">Enter Suit Designer</button><a/>
     <section class="faux-load" id="faux-load">
