--- a/Alt Designs/one/index.html
+++ b/Alt Designs/one/index.html
@@ -88,7 +88,7 @@
             <h2 class="suit-titles">Suit Front</h2>
           </div>
           <div class="suit-display-back suit-display-img">
-            <img src="./img/Hybrid1/h1-outline.png" />
+            <img src="./img/Hybrid1/h1-outline-back.png" />
             <h2 class="suit-titles">Suit Back</h2>
           </div>
           <div class="builder-btns">
