--- a/Alt Designs/one/index.html
+++ b/Alt Designs/one/index.html
@@ -33,17 +33,65 @@
               </div>
               <div id="color-picker-dorpdown-left-arm" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
-                <div onclick="colorPickerSelect('la-blue')" class="color-single color-single-dropdown">
-                  <div class="color-single-display" style="background: lightblue"></div>
-                  <p>Blue</p>
+                <div onclick="colorPickerSelect('la-aqua')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: aqua"></div>
+                  <p>Auqa</p>
                 </div>
                 <div onclick="colorPickerSelect('la-green')" class="color-single color-single-dropdown">
-                  <div class="color-single-display" style="background: lightgreen"></div>
-                  <p>Green</p>
+                  <div class="color-single-display" style="background: #53ef4b"></div>
+                  <p>Neon Green</p>
                 </div>
-                <div onclick="colorPickerSelect('la-red')" class="color-single color-single-dropdown">
-                  <div class="color-single-display" style="background: red"></div>
-                  <p>Red</p>
+                <div onclick="colorPickerSelect('la-pink')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: pink"></div>
+                  <p>Hot Pink</p>
+                </div>
+                <div onclick="colorPickerSelect('la-yellow')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: yellow"></div>
+                  <p>Yellow</p>
+                </div>
+                <div onclick="colorPickerSelect('la-maroon')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: maroon"></div>
+                  <p>Maroon</p>
+                </div>
+                <div onclick="colorPickerSelect('la-grey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: darkGrey"></div>
+                  <p>Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('la-navy')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Navy"></div>
+                  <p>Navy</p>
+                </div>
+                <div onclick="colorPickerSelect('la-purple')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Purple"></div>
+                  <p>Purple</p>
+                </div>
+                <div onclick="colorPickerSelect('la-darkGreen')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: DarkGreen"></div>
+                  <p>Dark Green</p>
+                </div>
+                <div onclick="colorPickerSelect('la-darkGrey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #393939"></div>
+                  <p>Dark Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('la-blue')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Blue"></div>
+                  <p>Blue</p>
+                </div>
+                <div onclick="colorPickerSelect('la-lime')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #a2e978"></div>
+                  <p>Lime</p>
+                </div>
+                <div onclick="colorPickerSelect('la-white')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: White"></div>
+                  <p>White</p>
+                </div>
+                <div onclick="colorPickerSelect('la-black')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Black"></div>
+                  <p>Black</p>
+                </div>
+                <div onclick="colorPickerSelect('la-teal')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Teal"></div>
+                  <p>Teal</p>
                 </div>
               </div>
             </div>
@@ -56,17 +104,65 @@
               </div>
               <div id="color-picker-dorpdown-right-upper-arm" class="picker-dropdown left-armdropdown">
                 <p class="picker-dropdown-p">Select Color</p>
-                <div onclick="colorPickerSelect('rua-blue')" class="color-single color-single-dropdown">
-                  <div class="color-single-display" style="background: lightblue"></div>
-                  <p>Blue</p>
+                <div onclick="colorPickerSelect('la-aqua')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: aqua"></div>
+                  <p>Auqa</p>
                 </div>
                 <div onclick="colorPickerSelect('rua-green')" class="color-single color-single-dropdown">
-                  <div class="color-single-display" style="background: lightgreen"></div>
-                  <p>Green</p>
+                  <div class="color-single-display" style="background: #53ef4b"></div>
+                  <p>Neon Green</p>
                 </div>
-                <div onclick="colorPickerSelect('rua-red')" class="color-single color-single-dropdown">
-                  <div class="color-single-display" style="background: red"></div>
-                  <p>Red</p>
+                <div onclick="colorPickerSelect('rua-pink')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: pink"></div>
+                  <p>Hot Pink</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-yellow')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: yellow"></div>
+                  <p>Yellow</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-maroon')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: maroon"></div>
+                  <p>Maroon</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-grey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: darkGrey"></div>
+                  <p>Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-navy')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Navy"></div>
+                  <p>Navy</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-purple')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Purple"></div>
+                  <p>Purple</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-darkGreen')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: DarkGreen"></div>
+                  <p>Dark Green</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-darkGrey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #393939"></div>
+                  <p>Dark Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-blue')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Blue"></div>
+                  <p>Blue</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-lime')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #a2e978"></div>
+                  <p>Lime</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-white')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: White"></div>
+                  <p>White</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-black')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Black"></div>
+                  <p>Black</p>
+                </div>
+                <div onclick="colorPickerSelect('rua-teal')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Teal"></div>
+                  <p>Teal</p>
                 </div>
               </div>
             </div>
@@ -74,13 +170,20 @@
         </section>
         <section class="suit-display">
           <div class="suit-display-front suit-display-img">
+            <!-- Left Upper Arm -->
             <section class="suit-images">
               <div id="upper-left-arm-svg-wrap" class"single-suit-image">
                 <svg style="fill:none;"id="upper-left-arm-svg" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 81.83 178.26"><title>left-upper-arm</title><g id="_0jEfYJ.tif" data-name="0jEfYJ.tif"><path d="M-105,462v3c-23.56-10.82-46.57-11.57-68.65,3.84-3.9,2.73-4.81.56-5.36-2.86-1.65-10.19-3.56-20.34-5-30.55-2.28-15.79-5.34-31.63,1-47.26a7.24,7.24,0,0,0,.46-2.45c.62-18.42,5.21-36.22,8.46-54.22,2-10.81,4.14-21.59,6.36-32.35.39-1.87.53-5.53,3.56-3.94,6.28,3.29,13.33,5.75,17.92,11.49,10.58,13.22,17.87,27.95,19.9,45,3.46,29.15,10.56,57.63,16.17,86.38C-108.63,446.11-106.74,454-105,462Z" transform="translate(186.83 -294.82)"/></g>
                 </svg>
               </div>
+              <!-- Right Upper Arm -->
               <div id="upper-right-arm-svg-wrap" class"single-suit-image">
                 <svg  style="fill:none;" id="upper-right-arm-svg" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 81.83 178.26"><title>left-upper-arm</title><g id="_0jEfYJ.tif" data-name="0jEfYJ.tif"><path d="M-58,376v5a32.69,32.69,0,0,0-.76,3.87C-60.35,405.14-64,425.1-68,445h-2c-13.77-11.29-29.55-15.46-47.18-13.85-9.36.86-17.92,4.41-26.82,6.85v-5c1.42-6.66,2.95-13.29,4.25-20,5.21-26.57,12.38-52.75,16.07-79.6,2.57-18.7,6.86-36.5,19.06-51.59a27.57,27.57,0,0,1,7.59-7c5-2.89,10-5.88,15-8.82h3c2.11,10.88,4,21.81,6.38,32.64,3.52,16,6.32,32.13,8.92,48.29C-62.12,356.69-62.55,366.83-58,376Z" transform="translate(144 -266)"/></g>
+                </svg>
+              </div>
+              <!-- Sholders -->
+              <div id="sholders-svg-wrap" class"single-suit-image">
+                <svg id="sholders-svg" "data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 277.07 114"><title>sholders</title><g id="ADYoaE.tif"><path d="M-3,315c4.56,3.32,9,6.85,13.74,9.89,3.1,2,3.35,3.73.75,6.11-4,3.7-7.92,7.59-12.15,11.05-13.47,11-27.33,21.59-39.57,34-10.71,10.9-20.13,22.9-29,35.29-4.36,6.07-9.09,11.8-13.75,17.62h-3c-3.2-15.11-4-30.63-8.16-45.6-2.87-10.25-5.63-20.53-9.12-30.59-1-2.88-1.16-5.08,2.64-6,18.92-4.62,37.11-11.58,55.62-17.49,10.66-3.4,21.19-8,32.81-7.74,4.45.12,7.57-1.77,8.21-6.58Z" transform="translate(103.89 -315)"/><path d="M173.13,349.35c-1.93,6.4-3.6,12-5.3,17.53-5.29,17.24-8.41,34.91-10.67,52.76a25.34,25.34,0,0,1-.53,2.95c-.43,1.71,0,4.1-2.13,4.71-2.33.67-3.44-1.48-4.66-3-10.1-12.74-18.85-26.48-29.31-39C109.58,372.23,96.84,361.11,84,350c-7.41-6.4-15.43-12.13-22.07-19.44-2.47-2.73-3.46-4.74.51-6.9a64.55,64.55,0,0,0,5.66-4.09c2.66-1.85,4.87-5,8.46-.45,1.27,1.62,5.32,1.46,8.1,1.43,11.29-.13,21.43,4.52,31.76,7.88,17.7,5.75,35,12.84,53.08,17.33C171.92,346.39,173.49,347.42,173.13,349.35Z" transform="translate(103.89 -315)"/></g>
                 </svg>
               </div>
             </section>
@@ -92,7 +195,7 @@
             <h2 class="suit-titles">Suit Back</h2>
           </div>
           <div class="builder-btns">
-            <div class="builder-btn" onclick="saveSuitOptions()">Save and Continue</div>
+            <div class="builder-btn" onclick="test()">Save and Continue</div>
             <div class="builder-btn">Reset Designer</div>
           </div>
         </section>
