the things we do for money

--- a/Alt Designs/one/index.html
+++ b/Alt Designs/one/index.html
@@ -235,6 +235,290 @@
                 </div>
               </div>
             </div>
+            <div id="color-single-lower-right-arm" class="color-single">
+              <div class="color-single-wrap" onclick="colorPickerDropdown('right-lower-arm')">
+                <h4>Right Lower Arm</h4>
+                <div id="right-lower-arm-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
+                <p id="right-lower-arm-title">Select</p>
+                <img src="./img/double-down-arrow.svg"/>
+              </div>
+              <div id="color-picker-dropdown-right-left-arm" class="picker-dropdown left-armdropdown">
+                <p class="picker-dropdown-p">Select Color</p>
+                <div onclick="colorPickerSelect('rla-aqua')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: aqua"></div>
+                  <p>Auqa</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-neon-green')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #53ef4b"></div>
+                  <p>Neon Green</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-pink')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: pink"></div>
+                  <p>Hot Pink</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-yellow')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: yellow"></div>
+                  <p>Yellow</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-maroon')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: maroon"></div>
+                  <p>Maroon</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-grey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: darkGrey"></div>
+                  <p>Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-navy')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Navy"></div>
+                  <p>Navy</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-purple')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Purple"></div>
+                  <p>Purple</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-darkGreen')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: DarkGreen"></div>
+                  <p>Dark Green</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-darkGrey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #393939"></div>
+                  <p>Dark Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-blue')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Blue"></div>
+                  <p>Blue</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-lime')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #a2e978"></div>
+                  <p>Lime</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-white')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: White"></div>
+                  <p>White</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-black')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Black"></div>
+                  <p>Black</p>
+                </div>
+                <div onclick="colorPickerSelect('rla-teal')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Teal"></div>
+                  <p>Teal</p>
+                </div>
+              </div>
+            </div>
+            <div id="color-single-left-wing" class="color-single">
+              <div class="color-single-wrap" onclick="colorPickerDropdown('left-wing')">
+                <h4>Left Wing</h4>
+                <div id="left-wing-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
+                <p id="left-wing-title">Select</p>
+                <img src="./img/double-down-arrow.svg"/>
+              </div>
+              <div id="color-picker-dropdown-left-wing" class="picker-dropdown left-armdropdown">
+                <p class="picker-dropdown-p">Select Color</p>
+                <div onclick="colorPickerSelect('lw-aqua')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: aqua"></div>
+                  <p>Auqa</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-neon-green')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #53ef4b"></div>
+                  <p>Neon Green</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-pink')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: pink"></div>
+                  <p>Hot Pink</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-yellow')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: yellow"></div>
+                  <p>Yellow</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-maroon')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: maroon"></div>
+                  <p>Maroon</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-grey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: darkGrey"></div>
+                  <p>Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-navy')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Navy"></div>
+                  <p>Navy</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-purple')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Purple"></div>
+                  <p>Purple</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-darkGreen')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: DarkGreen"></div>
+                  <p>Dark Green</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-darkGrey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #393939"></div>
+                  <p>Dark Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-blue')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Blue"></div>
+                  <p>Blue</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-lime')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #a2e978"></div>
+                  <p>Lime</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-white')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: White"></div>
+                  <p>White</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-black')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Black"></div>
+                  <p>Black</p>
+                </div>
+                <div onclick="colorPickerSelect('lw-teal')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Teal"></div>
+                  <p>Teal</p>
+                </div>
+              </div>
+            </div>
+            <div id="color-single-right-wing" class="color-single">
+              <div class="color-single-wrap" onclick="colorPickerDropdown('right-wing')">
+                <h4>Right Wing</h4>
+                <div id="right-wing-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
+                <p id="right-wing-title">Select</p>
+                <img src="./img/double-down-arrow.svg"/>
+              </div>
+              <div id="color-picker-dropdown-right-wing" class="picker-dropdown left-armdropdown">
+                <p class="picker-dropdown-p">Select Color</p>
+                <div onclick="colorPickerSelect('rw-aqua')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: aqua"></div>
+                  <p>Auqa</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-neon-green')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #53ef4b"></div>
+                  <p>Neon Green</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-pink')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: pink"></div>
+                  <p>Hot Pink</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-yellow')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: yellow"></div>
+                  <p>Yellow</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-maroon')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: maroon"></div>
+                  <p>Maroon</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-grey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: darkGrey"></div>
+                  <p>Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-navy')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Navy"></div>
+                  <p>Navy</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-purple')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Purple"></div>
+                  <p>Purple</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-darkGreen')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: DarkGreen"></div>
+                  <p>Dark Green</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-darkGrey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #393939"></div>
+                  <p>Dark Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-blue')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Blue"></div>
+                  <p>Blue</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-lime')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #a2e978"></div>
+                  <p>Lime</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-white')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: White"></div>
+                  <p>White</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-black')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Black"></div>
+                  <p>Black</p>
+                </div>
+                <div onclick="colorPickerSelect('rw-teal')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Teal"></div>
+                  <p>Teal</p>
+                </div>
+              </div>
+            </div>
+            <div id="color-single-body-wrap" class="color-single">
+              <div class="color-single-wrap" onclick="colorPickerDropdown('body-wrap')">
+                <h4>Body Wrap</h4>
+                <div id="body-wrap-label" class="color-single-display" style="background: rgba(0,0,0, .0)"></div>
+                <p id="body-wrap-title">Select</p>
+                <img src="./img/double-down-arrow.svg"/>
+              </div>
+              <div id="color-picker-dropdown-body-wrap" class="picker-dropdown left-armdropdown">
+                <p class="picker-dropdown-p">Select Color</p>
+                <div onclick="colorPickerSelect('bw-aqua')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: aqua"></div>
+                  <p>Auqa</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-neon-green')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #53ef4b"></div>
+                  <p>Neon Green</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-pink')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: pink"></div>
+                  <p>Hot Pink</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-yellow')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: yellow"></div>
+                  <p>Yellow</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-maroon')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: maroon"></div>
+                  <p>Maroon</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-grey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: darkGrey"></div>
+                  <p>Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-navy')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Navy"></div>
+                  <p>Navy</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-purple')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Purple"></div>
+                  <p>Purple</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-darkGreen')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: DarkGreen"></div>
+                  <p>Dark Green</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-darkGrey')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #393939"></div>
+                  <p>Dark Grey</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-blue')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Blue"></div>
+                  <p>Blue</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-lime')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: #a2e978"></div>
+                  <p>Lime</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-white')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: White"></div>
+                  <p>White</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-black')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Black"></div>
+                  <p>Black</p>
+                </div>
+                <div onclick="colorPickerSelect('bw-teal')" class="color-single color-single-dropdown">
+                  <div class="color-single-display" style="background: Teal"></div>
+                  <p>Teal</p>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
         <section class="suit-display">
